style.css
.layout {
    display: grid;
    align-items: start;
    gap: 10px;
    margin-left: 50px;
}

.header {
    display: grid;
    grid-template-columns: 80px 80px 80px 80px 80px;
    gap: 30px;
    justify-items: center;

    background: rgba(255, 255, 255, 0.25);
    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    border-radius: 16px;
    border: 1px solid rgba(255, 255, 255, 0.4);
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
    padding: 10px;
    max-width: 1375px;
}

.arrow {
    vertical-align: text-top;
}

.header-hire{
    padding: 10px;
    width: 120px;
    text-align: center;
    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: bold;
    font-size: 15px;
    color:rgb(20, 20, 20);
    cursor: pointer;

    background: rgba(255, 255, 255, 0.25);
    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    border-radius: 16px;
    border: 1px solid rgba(255, 255, 255, 0.4);
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
    margin-left: 1620px;
}

.header-home, .header-about, .header-projects, 
.header-gallery{
    padding: 10px 20px;
    text-align: center;
    background-color: white;
    border: none;
    padding: 10px;
    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: bold;
    font-size: 15px;
    color:rgb(123, 123, 123);
    cursor: pointer;
    margin-left: 1000px;
    list-style: none;
}

.personal-info {
    display: grid;
    grid-template-columns: 940px 1fr;
}

.pfp-grid {
    display: grid;
    max-width: 940px;
    align-items: start;
    font-family: Arial, Helvetica, sans-serif;
    display: grid;
}

.pfp {
    height: 140px;
    width: 140px;
    border-radius: 90px;
    margin-top: 20px;
    
    position: absolute;
}

.contact {
    padding: 5px 25px;
    background: rgba(255, 255, 255, 0.25);
    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    border-radius: 16px;
    border: 1px solid rgba(255, 255, 255, 0.4);
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
    max-width: 405px;
}

.contact-description {
    margin-bottom: 55px;
    margin-top: -13px;
    color:rgb(123, 123, 123)
}

.info {
    margin-left: 155px;
    margin-top: 30px;
    margin-bottom: 3px;
    font-size: 30px;
}


.info-emoji {
    vertical-align: middle;
    margin-bottom: 3px;
    width: 19px;
    height: 19px;
    color: blue;
    
}

.loc-grid {
    display: grid;
    align-items: center;
    grid-template-columns: 10px 1fr;
}

.loc {
    margin-left: 162px;
    margin-top: 0px;
    font-size: 12px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

.loc-emoji {
    height: 13px;
    width: 13px;
    margin-left: 155px;
    margin-top: -10px;
}

.status {
    margin-left: 155px;
    margin-top: -10px;
}

.work {
    border-width: 2px;
    border-radius: 20px;
    padding: 8px;
    text-align: center;
    max-width: 110px;
    border-style: solid;
    font-size: 13.5px;
    background: rgba(34, 197, 94, 0.15);
    color: #166534;
    border: 1px solid rgba(34, 197, 94, 0.5);
    box-shadow: 0 4px 10px rgba(34,197,94,0.25);
}

.other_info-block {
    margin-top: 15px;
    margin-left: 10px;
    margin-bottom: 8px;
    display: grid;
    gap: 50px;
    grid-template-columns: 230px 235px 150px;
}

.deg-emoji, .student-emoji, .eng-emoji {
    height: 17px;
    width: 17px;
    vertical-align: text-bottom;
}

.degree {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 13px;
    color:rgb(123, 123, 123);
}

.engineer {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 13px;
    color:rgb(123, 123, 123);
}

.student {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 13px;
    color:rgb(123, 123, 123);
}

.email {
    padding-top: 9px;
    padding-bottom: 9px;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    align-items: center;
    display: flex;
    justify-content: center;
    cursor: pointer;
    background: rgba(255, 255, 255, 0.25);
    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    border-radius: 16px;
    border: 1px solid rgba(255, 255, 255, 0.4);
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
    padding: 10px;
    max-width: 150px;
}

.email-emoji {
    height: 16px;
    width: 16px;
    max-width: 200px;
    margin-right: 7px;
}

.questions {
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    color: hsl(0, 0%, 0%);
    background-color: hsl(0, 0%, 0%);
    max-width: 200px;
    align-items: center;
    display: flex;
    justify-content: center;
    cursor: pointer;

    background: rgba(0, 0, 0, 0.25);
    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(20px);
    border-radius: 16px;
    border: 1px solid rgba(255, 255, 255, 0.4);
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
    padding: 10px;
}

.questions-emoji {
    height: 13px;
    width: 13px;
    margin-right: 7px;
}

.button-grid {
  display: grid;  
  grid-template-columns: 150px 150px;
  margin-bottom: 10px;
  gap: 10px;
}

.about-card {
    max-width: 900px;
    border: 2px;
    border-style: solid;
    border-color: rgb(255, 255, 255);
    background: rgba(255, 255, 255, 0.25);
    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    border-radius: 16px;
    border: 1px solid rgba(255, 255, 255, 0.4);
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
    border-radius: 10px;
    padding-left: 20px;
    padding-right: 30px;
    padding-bottom: 20px;
    line-height: 30px;
    font-size: 17px;
    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.about {
    font-family: 'Times New Roman', Times, serif;
    justify-content: center;
    align-items: center;
}

.about-me {
    font-family: "Archivo Black", sans-serif;
    font-weight: lighter;
    font-style: normal;
    font-size: 23px;
    height: 20px;
}

.experiences {
    max-width: 450px;
    border: 2px;
    border-radius: 5px;
    border-style: solid;
    background: rgba(255, 255, 255, 0.25);
    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    border-radius: 16px;
    border: 1px solid rgba(255, 255, 255, 0.4);
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
    padding-left: 20px;
    padding-right: 20px;
    line-height: 30px;
    font-family: "Archivo Black", sans-serif;
    font-weight: lighter;
    font-style: normal;
    font-size: 18px;
    min-height: 1025px;
}

.about-section {
  display: grid;
  grid-template-columns: 940px 445px;
  grid-template-rows: 340px 700px;
  align-items: start;
  gap: 10px;
}

.contact-stack {
    display: grid;
    grid-template-columns: 460px 470px;
    gap: 8px;
}

.contact-head {
    font-family: "Archivo Black", sans-serif;
    font-weight: lighter;
    font-style: normal;
    font-size: 20px;
    height: 26px;
}

.featured_projects_block {
    padding: 5px 25px;
    background: rgba(255, 255, 255, 0.25);
    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    border-radius: 16px;
    border: 1px solid rgba(255, 255, 255, 0.4);
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
    grid-column: 1 / 3;
    min-height: 400px;
}

.projects {
    font-family: "Archivo Black", sans-serif;
    font-weight: lighter;
    font-style: normal;
    font-size: 20px;
}

.stack {
    background: rgba(255, 255, 255, 0.25);
    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    border-radius: 16px;
    border: 1px solid rgba(255, 255, 255, 0.4);
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
    padding: 5px 25px;
    display: grid;
    grid-template-columns: 150px 100px;
    gap: 200px;
}

.stack_word {
    font-family: "Archivo Black", sans-serif;
    font-weight: lighter;
    font-style: normal;
    font-size: 20px;
}

.view_button {
    display: inline-block;
    margin-top: 15px;
    text-decoration: underline;
    color: rgb(123,123,123);
    font-size: 12px;
}

.arrow_out-emoji {
    width: 13px;
    height: 13px;
    vertical-align: middle;
}

.gmail-emoji, .linkedin-emoji, .github-emoji {
    height: 17px;
    width: 17px;
    vertical-align: text-bottom;
}

